Moved to multi-loader, single-jar gradle setup; modernised gradle setup with Modstitch Toolkit; use new ffm SDL bindings